feat(task-service): add pagination to GET /tasks and fix partial update